fix overlapping of result-pagianation on iPad

--- a/app/assets/stylesheets/partials/_media.css.sass
+++ b/app/assets/stylesheets/partials/_media.css.sass
@@ -395,6 +395,10 @@
     .info.first
       margin-left: 0
 
+  .main-title
+    h1
+      margin-top: 40px
+
   .sidebar
     ul
       margin-left: 0.5em
